Added the lists

--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
     <div class="sidebar">
         <h4>To Do list</h4>
         <hr>
-        <input type="text" placeholder="Enter Task ">
+        <input type="text" placeholder="Enter Task " id="input">
+        <p>Tasks for the day :- </p>
+        <ul class="list tasks">
+            
+        </ul>
+    </div>
+    <div class="footer">
+        
     </div>
     <script src="app.js"></script>
 </body>
