Added task counter

--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
         <hr>
         <input type="text" placeholder="Enter Task " id="input">
         <p>Tasks for the day :- </p>
+            <p>Total tasks Pending :- <button id="taskCount">0</button> </p>
+            <hr>
         <ul class="list tasks">
-            
+
         </ul>
     </div>
     <div class="footer">
-        
+
     </div>
     <script src="app.js"></script>
 </body>
