--- a/index.html
+++ b/index.html
@@ -19,17 +19,26 @@
     <div class="top">
         <h1>Achieve Your Goals: To-Do Lists that Work.</h1>
     </div>
-    <div class="sidebar">
-        <h4>To Do list</h4>
-        <hr>
-        <input type="text" placeholder="Enter Task " id="input">
-        <p>Tasks for the day :- </p>
-            <p>Total tasks Pending :- <button id="taskCount">0</button> </p>
+    <div class="main">
+        <div class="sidebar">
+            <h4>To Do list</h4>
             <hr>
-        <ul class="list tasks">
-
-        </ul>
+            <input type="text" placeholder="Enter Task " id="input">
+            <p>Tasks for the day :- </p>
+                <p>Total tasks Pending :- <button id="taskCount">0</button> </p>
+                <hr>
+            <ul class="list tasks">
+    
+            </ul>
+        </div>
+        <div class="calender-area">
+            <h4 id="CH">Streak</h4>
+            <table class="calender">
+                
+            </table>
+        </div>
     </div>
+
     <div class="footer">
 
     </div>
